Fixed to grab upper/lower etc